# email-classifier

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/core/: config.py
app/services/: nlp.py  openai_client.py
app/static/: index.js  result.css
app/static/css/: global.css  index.css  result.css
app/static/js/: result.js
app/templates/: index.html  result.html
app/utils/: pdf.py
